[FIX] web_editor, mass_mailing: fix separator visiblity in s_showcase
Problem:
When adding the `s_showcase` template in email marketing and saving,
the separator is not properly rendered in the received email.

Cause:
The separator is implemented as an empty `<div>` with
`display: inline-block` and `height: 100%`. In emails, this can
collapse to 0px, making the separator invisible. Additionally,
`border-<position>-color` was not applied correctly in some cases.

Solution:
- Lock the computed height of empty separator elements so they remain
visible.
- Restrict visibility of separators to desktop screen sizes where
columns are stacked horizontally.
- Fix rendering of `border-<position>-color`.

Steps to reproduce:
1. Open a new email marketing.
2. Add the `s_showcase` template.
3. Test-send the email.
4. Observe that the separator is not visible.

opw-5077992

X-original-commit: 855b0cd8599fabe044bf7e609bda2e32304723e6

--- a/addons/mass_mailing/static/src/scss/mass_mailing_mail.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing_mail.scss
@@ -58,4 +58,7 @@ body:has(.o_layout) {
     .o_desktop_h100 {
         height: unset !important;
     }
+    .s_showcase div:not(:has(*)) {
+        display: none;
+    }
 }
